# hexponent

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  hexponent_todo.txt
benches/: benchmark.rs
fuzz/: Cargo.toml  run_fuzzer.sh
fuzz/src/: main.rs
src/: fpformat.rs  lib.rs  parse_utils.rs  tests.rs
